Callback functions logic changed.
Consolidated Text/Error descriptions in oo.c

Release 0.5:
1. Added RAS channel support. This release supports
   GatekeeperRequest, RegistrationRequest, AdmissionRequest,
   DisengageRequest and corresponding response messages.
2. Added aliases support and parsing capability. The endpoint
   will now be able to register an e-mail id, h323-id, url,
   and dialedDigits aliases and will be able to call other
   endpoints using these types of aliases with the help of
   gatekeeper.
3. Added capability to configure local call signalling address.
   This was done to avoid problems with logic to retrieve local
   IP address which can fail on some systems, which do not have
   host name setup. This logic is still used as backup, in case
   user does not configure IP.
4. Added auto answer feature.This was done to allow user make a
   decision to answer/reject call.
5. Fixed bugs reported in 0.4 release.

Release 0.4:
1. Added support for FastStart and Tunneling.
2. Added support for external configuration of RTP ip:port. This
   allows application to use any ip:port combination for media channel.
   Thus, now it is possible to terminate signalling at one ip address and
   media at some different ip address. Default uses localip and an RTP port
   from the range specified by the application.
3. Display ie added to outgoing SETUP message.
4. Error handling and logging improved.


Release 0.3.1:
1. Fixes bug reported on source forge as request Id: 1079205
   Also fixes other many unknown bug related with ooh245.c & ooq931.c function calls.

2. Fixes bug reported on source forge as request Id:1078936
   Host name can be longer than 20 length, Increased the capacity upto 100 character

3. Fixed problem with pdf documents


Release 0.3: New Features
1. New Design
   a. Allows handling multiple simultaneous calls
   b. Unique call identifiers for calls
   c. Applications can add capabilities and register control functions