@@ -1,3 +1,5 @@
+Initialize outgoing to 0 in ooh245.c. This can cause failure in
+faststart.
 Callback functions logic changed.
 Consolidated Text/Error descriptions in oo.c
 
